# incident-commander-openenv

./: .gitignore  CLAUDE.md  PROJECT.md  bon.json  bon_results.json
.claude/: settings.local.json
.cursor/plans/: incident_commander_openenv_8deacc01.plan.md
incident_commander/: Dockerfile  JUDGING.md  README.md  __init__.py  blog.md  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
incident_commander/assets/: README.md
incident_commander/demo/: PITCH.md  __init__.py  episodes.json  run_episodes.py
incident_commander/graders/: __init__.py  postmortem_check.py  rubric.py
incident_commander/server/: Dockerfile  __init__.py  app.py  incident_commander_environment.py
incident_commander/simulator/: __init__.py  faults.py  npcs.py  observability.py  service_graph.py  simulator.py
incident_commander/tests/: test_smoke.py
incident_commander/training/: __init__.py  best_of_n.py  build_sft_dataset.py  eval.py  eval_unsloth.py  launch_hf_rft_job.py  oracle_policies.py  plot_metrics.py  rollout.py  run_rft_on_sft.py  train_colab.ipynb  train_grpo.py  train_grpo_colab.ipynb  train_rft.py  train_sft.py  train_sft_colab.ipynb
incident_commander/web/: index.html
