# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident_commander"
version = "0.1.0"
description = "Incident Commander environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
# GPU-only. Installed inside the Colab training notebook, never on the env
# server. Unsloth pulls in a torch build matching the Colab CUDA version; pin
# top-level deps lightly and let Unsloth resolve the rest.
training = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.9.0,<0.14.0",
    "unsloth",
    # plot_metrics.py is imported at the end of every train run and at the top
    # of train_sft_colab.ipynb cell 7 — without matplotlib the whole job's
    # diagnostic output is lost even when training succeeds. Pin a permissive
    # lower bound so we get a recent enough Agg backend.
    "matplotlib>=3.7",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m incident_commander.server.app
server = "incident_commander.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "incident_commander",
    "incident_commander.server",
    "incident_commander.simulator",
    "incident_commander.graders",
    "incident_commander.training",
]
package-dir = { "incident_commander" = ".", "incident_commander.server" = "server", "incident_commander.simulator" = "simulator", "incident_commander.graders" = "graders", "incident_commander.training" = "training" }
